treewalk/src/evaluator/snapshots/treewalk__evaluator__test__interpret_statement_if.snap
---
source: src/evaluator/test.rs
expression: env
snapshot_kind: text
---
EnvStack(
    [
        {
            "a": Number(
                3.0,
            ),
        },
    ],
)
