treewalk/src/evaluator/snapshots/treewalk__evaluator__test__interpret_statement_scope_closure.snap
---
source: src/evaluator/test.rs
expression: env
snapshot_kind: text
---
EnvStack(
    [
        {
            "a": Number(
                1.0,
            ),
        },
    ],
)
